--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -22,7 +22,7 @@
     </div> <!-- end of navbar-menu -->
 </nav> <!-- end of navbar -->
 
-<script>
+<!-- <script>
     const createApp = options => {
         const app = Vue.createApp(options)
         app.config.compilerOptions.delimiters = ['[[', ']]']
@@ -40,4 +40,4 @@
             },
         }
     }).mount("#NavBar")
-</script>
+</script> -->
