--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,8 @@
 <body class="has-navbar-fixed-top">
     {% include navigation.html %}
     {{ content }}
+    {% include footer.html %}
+    {% include foot.html%}
 </body>
 
 </html>
