--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,9 +2,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>{{ page.title }}</title>
 <link rel="stylesheet" href="/assets/css/styles.css">
-<!-- <link rel="stylesheet" href="/assets/css/onedark.css"> -->
 <link rel="stylesheet" href="/assets/css/highlights.css">
 <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css"> -->
-<!-- Scripts Begin here -->
-<script src="https://cdn.jsdelivr.net/npm/vue@3.2.21/dist/vue.global.js"></script>
-<!-- <script src="https://cdn.jsdelivr.net/npm/vue@3.2.21/dist/vue.global.prod.js"></script> -->
+{% feed_meta %}
+{% seo %}
