--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,11 +5,10 @@
     {% include head.html %}
 </head>
 
-<body class="has-navbar-fixed-top">
+<body>
     {% include navigation.html %}
     {{ content }}
     {% include footer.html %}
     {% include foot.html%}
 </body>
-
 </html>
