--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,26 +2,47 @@
 layout: default
 ---
 <section 
-class="hero is-medium has-text-centered
+
 {% unless page.image-url %}
-    is-primary
-{% endunless%}
-" 
-style="
-    {% if page.image-url %}
-    background-image:url('{{ page.image-url }}');
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    {% endif %}">
+class="hero is-medium has-text-centered has-background-black"
+{% else %}
+class="hero is-medium has-text-centered"
+style=" background-image:url('{{ page.image-url }}');
+background-repeat: no-repeat;
+background-position: center;
+background-size: cover;"
+{% endunless%}>
+
     <div class="hero-body">
-        <h1 class="title has-text-white">
+        <h1 class="title is-1"  style="font-family: Yeseva One;">
             {{ page.title }}
         </h1>
+        <p class="subtitle">
+            {{ page.subtitle }}
+        </p>
     </div>
-</section>
-<section class="section content">
+
+</section> <!-- End of Hero Section -->
+
+
+<section class="section">
     <div class="container">
-        {{ page.content }}
+        <div class="box">
+            {% if page.toc %}
+            <div class="menu">
+                <p class="menu-label">
+                    {{ page.title }}
+                </p>
+                {% toc %}
+            </div>
+            {% endif %}
+        </div>
+        <p class="block">
+            {{page.description }}
+        </p>
+
+        <div class="content">
+            {{ content }}
+        </div>
     </div>
 </section>
