--- a/_sass/highlights.scss
+++ b/_sass/highlights.scss
@@ -2,92 +2,101 @@
  * Syntax highlighting styles
  */
 .highlighter-rouge {
-  background-color: $grey-dark;
-  color: $white;
+  background-color: $dark;
+  color: $cyan;
+  border-radius: 4px;
+  box-shadow: 2px 2px $grey-dark;
 }
 
 .highlight {
   background-color: $dark;
-  color: #26d2f6;
+  color: $cyan;
   margin: $spacing-unit / 2;
-  font-family: $family-monospace;
-
-  .highlighter-rouge & {
-    background-color: $dark;
-  }
+  font-family: $family-code;
+  border-radius: 4px;
+  position: relative;
 
   .p {
-    color: #fb49c6;
-  }
+    color: $magenta;
+  } // period
 
   .c {
-    color: #8e87c1;
-    font-style: italic;
+    color: $purple-light;
   } // Comment
+
   .err {
-    color: #ff4892;
-    background-color: #e3d2d2;
+    color: $red;
+    background-color: $grey-dark;
   } // Error
+
   .k {
-    color: #b57ce5;
-    font-weight: bold;
+    color: $purple;
   } // Keyword
+
   .kn {
-    color: #b57ce5;
-    font-weight: bold;
+    color: $purple;
   } // Keyword
+
   .o {
-    color: #fb49c6;
-    font-weight: bold;
+    color: $purple;
   } // Operator
+
   .cm {
-    color: #8e87c1;
-    font-style: italic;
+    color: $purple-light;
   } // Comment.Multiline
+
   .cp {
-    color: #8e87c1;
-    font-weight: bold;
+    color: $purple;
   } // Comment.Preproc
+
   .c1 {
-    color: #8e87c1;
-    font-style: italic;
+    color: $purple-light;
   } // Comment.Single
+
   .cs {
-    color: #8e87c1;
-    font-weight: bold;
-    font-style: italic;
+    color: $purple-light;
   } // Comment.Special
+
   .gd {
-    color: #000;
-    background-color: #fdd;
+    color: $white;
+    background-color: $black;
   } // Generic.Deleted
+
   .gd .x {
-    color: #000;
-    background-color: #faa;
+    color: $white;
+    background-color: $red;
   } // Generic.Deleted.Specific
+
   .ge {
-    font-style: italic;
+    font-style: oblique;
   } // Generic.Emph
+
   .gr {
-    color: #a00;
+    color: $red;
   } // Generic.Error
+
   .gh {
-    color: #999;
+    color: $purple-light;
   } // Generic.Heading
+
   .gi {
-    color: #000;
-    background-color: #dfd;
+    color: $white;
+    background-color: $grey-dark;
   } // Generic.Inserted
+
   .gi .x {
-    color: #000;
-    background-color: #afa;
+    color: $green;
+    background-color: $grey-dark;
   } // Generic.Inserted.Specific
+
   .go {
     color: #888;
   } // Generic.Output
+
   .gp {
     color: #555;
   } // Generic.Prompt
+
   .gs {
     font-weight: bold;
   } // Generic.Strong
@@ -95,134 +104,130 @@
     color: #aaa;
   } // Generic.Subheading
   .gt {
-    color: #a00;
+    color: $red;
   } // Generic.Traceback
   .kc {
-    color: #b57ce5;
-    font-weight: bold;
+    color: $purple;
   } // Keyword.Constant
   .kd {
-    color: #b57ce5;
-    font-weight: bold;
+    color: $purple;
   } // Keyword.Declaration
   .kp {
-    color: #b57ce5;
-    font-weight: bold;
+    color: $purple;
   } // Keyword.Pseudo
   .kr {
-    color: #b57ce5;
-    font-weight: bold;
+    color: $purple;
   } // Keyword.Reserved
   .kt {
-    color: #b57ce5;
-    font-weight: bold;
+    color: $purple;
   } // Keyword.Type
   .m {
-    color: #35dd9d;
+    color: $turquoise;
   } // Literal.Number
   .s {
-    color: #35dd9d;
+    color: $turquoise;
   } // Literal.String
   .n {
-    color: #eaeaea;
+    color: $white;
   }
   .na {
-    color: #008080;
+    color: $cyan;
   } // Name.Attribute
   .nb {
-    color: #b57ce5;
+    color: $purple;
   } // Name.Builtin
   .nc {
-    color: #458;
-    font-weight: bold;
+    color: $magenta;
+    font-weight: normal;
+    font-style: oblique;
   } // Name.Class
   .no {
-    color: #008080;
+    color: $cyan;
   } // Name.Constant
+
   .ni {
-    color: #800080;
+    color: $purple;
   } // Name.Entity
+
   .ne {
-    color: #900;
-    font-weight: bold;
+    color: $magenta;
   } // Name.Exception
   .nf {
-    color: #26d2f6;
-    font-weight: bold;
+    color: $cyan;
   } // Name.Function
   .nn {
-    color: #009eff;
+    color: $magenta;
   } // Name.Namespace
   .nt {
-    color: #000080;
+    color: $magenta;
   } // Name.Tag
   .nv {
-    color: #008080;
+    color: $magenta;
   } // Name.Variable
   .ow {
     font-weight: bold;
   } // Operator.Word
   .w {
-    color: #bbb;
+    color: $black;
   } // Text.Whitespace
   .mf {
-    color: #099;
+    color: $cyan;
   } // Literal.Number.Float
   .mh {
-    color: #099;
+    color: $cyan;
   } // Literal.Number.Hex
   .mi {
-    color: #099;
+    color: $cyan;
   } // Literal.Number.Integer
   .mo {
-    color: #099;
+    color: $cyan;
   } // Literal.Number.Oct
   .sb {
-    color: #35dd9d;
+    color: $turquoise;
   } // Literal.String.Backtick
   .sc {
-    color: #35dd9d;
+    color: $turquoise;
   } // Literal.String.Char
   .sd {
-    color: #35dd9d;
+    color: $turquoise;
   } // Literal.String.Doc
   .s2 {
-    color: #35dd9d;
+    color: $turquoise;
   } // Literal.String.Double
   .se {
     color: #ff584f;
   } // Literal.String.Escape
   .sh {
-    color: #35dd9d;
+    color: $turquoise;
   } // Literal.String.Heredoc
   .si {
-    color: #f92ebd;
+    color: $magenta;
   } // Literal.String.Interpol
   .sx {
-    color: #ff584f;
+    color: $orange;
   } // Literal.String.Other
   .sr {
-    color: #009eff;
+    color: $magenta;
   } // Literal.String.Regex
   .s1 {
-    color: #35dd9d;
+    color: $turquoise;
   } // Literal.String.Single
   .ss {
-    color: #35dd9d;
+    color: $turquoise;
   } // Literal.String.Symbol
   .bp {
-    color: #999;
+    color: $purple;
   } // Name.Builtin.Pseudo
   .vc {
-    color: #26d2f6;
+    color: $cyan;
   } // Name.Variable.Class
   .vg {
-    color: #26d2f6;
+    color: $cyan;
   } // Name.Variable.Global
   .vi {
-    color: #26d2f6;
+    color: $cyan;
   } // Name.Variable.Instance
   .il {
-    color: #35dd9d;
+    color: $turquoise;
   } // Literal.Number.Integer.Long
 }
