--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,11 +1,11 @@
 @charset "utf-8";
+
 // Import a Google Font
-@import url("https://fonts.googleapis.com/css?family=Nunito:400,700");
-@import url("https://fonts.googleapis.com/css2?family=Poiret+One&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Bangers&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Bungee+Shade&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Rampart+One&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500;600;700;800;900&display=swap");
+@import url("https://cdn.jsdelivr.net/npm/@xz/fonts@1/serve/mononoki.min.css");
+@import url("https://fonts.googleapis.com/css2?family=Yeseva+One&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap");
 
 // Set your brand colors
 $white-ter: #ffffff;
@@ -21,20 +21,40 @@ $grey-darker: #2d2b3a;
 $grey-dark: #444154;
 $orange: #ff584f;
 $purple: #bf75ff;
+$purple-light: #8e87c1;
+$magenta: #fb49c6;
 
 // Set Site ColorScheme
 $dark: $black;
 $body-background-color: $grey-darker;
 $footer-background-color: $dark;
-$background: $grey-dark;
-$text: $white-ter;
+$background: $dark;
+$text: $white;
 $title-color: $white-ter;
-$link: $blue;
+$link: $cyan;
 $link-hover: $turquoise;
 $text-strong: $white-ter;
 
+// box-config
+$box-background-color: $background;
+$box-color: $white;
+$box-shadow: 1px 1px 10px $purple;
+
+// button config
+$button-color: $cyan;
+$button-background-color: $grey-darker;
+$button-border-color: $cyan;
+
+//menu config
+$menu-item-color: $link;
+$menu-item-hover-color: $link-hover;
+$menu-item-hover-background-color: $grey-darker;
+$menu-item-active-color: $red;
+$menu-item-active-background-color: $grey-dark;
+$menu-label-color: $purple-light;
+
 // navbar colors
-$navbar-background-color: $black;
+$navbar-background-color: $background;
 $navbar-item-color: $turquoise;
 $navbar-item-hover-color: $cyan;
 $navbar-item-hover-background-color: $grey-darker;
@@ -43,13 +63,28 @@ $navbar-item-active-color: $blue;
 $navbar-item-active-background-color: $grey-dark;
 
 // Update Bulma's global variables
-$family-monospace: "Inconsolata";
-$family-sans-serif: "Nunito", sans-serif;
+$family-monospace: "mononoki", monospace;
+$family-sans-serif: "Nunito Sans", sans-serif;
 
 // Update some of Bulma's component variables
 
 @import "./bulma/bulma.sass";
 
+$spacing-unit: 30px;
+
+@import "./highlights.scss";
+
 .background-random {
   background-image: url("https://source.unsplash.com/random/1920x1080");
+}
+
+body {
+  font-size: $size-medium;
+}
+
+.bd-copy {
+  opacity: 100;
+  position: absolute;
+  right: $spacing-unit/2;
+  top: $spacing-unit/2;
 }
