--- a/_layouts/pages.html
+++ b/_layouts/pages.html
@@ -1,20 +1,10 @@
 ---
 layout: default
 ---
-<section 
-class="hero is-medium has-text-centered
-{% unless page.image-url %}
-    is-primary
-{% endunless%}
-" 
-style="
-    {% if page.image-url %}
-    background-image:url('{{ page.image-url }}');
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    {% endif %}
-    ">
+<section {% unless page.image-url %} class="hero is-medium has-text-centered is-primary" {% else%}
+    class="hero is-medium has-text-centered cover-image" style="background-image:url('{{ page.image-url }}');" {%
+    endunless%}>
+
     <section class="hero-body">
         <h1 class="title">
             {{ page.title }}
